bin_PROGRAMS 		= deltaPlaning

noinst_HEADERS		= eodeltaPlaning.h \
			eodeltaPlaningEvalFunc.h \
			eodeltaPlaningInit.h \
			eodeltaPlaningMutation.h \
			eodeltaPlaningQuadCrossover.h

deltaPlaning_SOURCES 	= deltaPlaningEA.cpp


dnl Local Variables:
dnl coding: iso-8859-1
dnl mode: makefile-automake
dnl fill-column: 80
dnl End:
